# sudoku_solver

./: .gitignore  Cargo.toml
fragments/: Invalid Test Cases - Sudopedia Mirror.html  Valid Test Cases - Sudopedia Mirror.html
src/: board.rs  board_serialize.rs  compositor.rs  genetic_alg.rs  lib.rs  main.rs  solver.rs
tests/: lib.rs
